runtime/native/libxpu_rt/include/xpu_rt/xpu_rt.h

/* ------------------------------------------------------------------ */
/* Status codes                                                        */
/* ------------------------------------------------------------------ */

typedef int32_t cg_rt_status_t;
#define CG_RT_OK                     0
#define CG_RT_ERR_INVALID_ARGUMENT  -1
#define CG_RT_ERR_OUT_OF_MEMORY     -2
#define CG_RT_ERR_UNSUPPORTED       -3
#define CG_RT_ERR_NOT_FOUND         -4
#define CG_RT_ERR_TIMED_OUT         -5
#define CG_RT_ERR_FAILED_PRECOND    -6
#define CG_RT_ERR_ABORTED           -7
#define CG_RT_ERR_UNKNOWN          -99
const char *cg_rt_status_string(cg_rt_status_t status);
/* Timeout sentinels (nanoseconds). */
#define CG_RT_TIMEOUT_POLL      UINT64_C(0)
#define CG_RT_TIMEOUT_INFINITE  UINT64_MAX
/* ------------------------------------------------------------------ */
/* Opaque handle types                                                 */
/* ------------------------------------------------------------------ */

typedef struct cg_rt_instance       cg_rt_instance_t;
typedef struct cg_rt_device         cg_rt_device_t;
typedef struct cg_rt_buffer         cg_rt_buffer_t;
typedef struct cg_rt_semaphore      cg_rt_semaphore_t;
typedef struct cg_rt_command_buffer cg_rt_command_buffer_t;
typedef struct cg_rt_executable     cg_rt_executable_t;
/* ------------------------------------------------------------------ */
/* Instance + device lifecycle                                         */
/* ------------------------------------------------------------------ */

/*
 * Instance factory.
 *
 * ``driver_name`` selects a registered driver ("cpu_sync", "cpu_task",
 * "cuda", ...). Pass NULL for the default driver (currently
 * "cpu_sync"). Returns CG_RT_ERR_NOT_FOUND when the driver is unknown.
 */
cg_rt_status_t cg_rt_instance_create(const char        *driver_name,
                                     cg_rt_instance_t **out_instance);
void cg_rt_instance_destroy(cg_rt_instance_t *instance);
cg_rt_status_t cg_rt_device_open(cg_rt_instance_t *instance,
                                 uint32_t          device_index,
                                 cg_rt_device_t  **out_device);
void cg_rt_device_close(cg_rt_device_t *device);
cg_rt_status_t cg_rt_device_query_traits(cg_rt_device_t        *device,
                                         cg_rt_device_traits_t *out_traits);
/* ------------------------------------------------------------------ */
/* Buffers                                                             */
/* ------------------------------------------------------------------ */

typedef enum {
    CG_RT_MEMORY_SPACE_HOST   = 1,   /* host pageable */
    CG_RT_MEMORY_SPACE_DEVICE = 2,   /* device-local */
    CG_RT_MEMORY_SPACE_UNIFIED = 3,  /* unified / shared */
} cg_rt_memory_space_t;
cg_rt_status_t cg_rt_buffer_alloc(cg_rt_device_t       *device,
                                  size_t                size_bytes,
                                  cg_rt_memory_space_t  memory_space,
                                  uint32_t              usage_flags,
                                  cg_rt_buffer_t      **out_buffer);
void cg_rt_buffer_destroy(cg_rt_buffer_t *buffer);
size_t cg_rt_buffer_size(const cg_rt_buffer_t *buffer);
/*
 * Map the buffer for host access. On cpu_sync this returns the direct
 * host pointer (no copy). On discrete-memory drivers this may return a
 * staging pointer backed by an implicit transfer on ``unmap``.
 */
cg_rt_status_t cg_rt_buffer_map(cg_rt_buffer_t  *buffer,
                                size_t           offset,
                                size_t           size,
                                void           **out_ptr);
cg_rt_status_t cg_rt_buffer_unmap(cg_rt_buffer_t *buffer);
/* ------------------------------------------------------------------ */
/* Timeline semaphores                                                 */
/* ------------------------------------------------------------------ */

/*
 * Timeline semaphores carry a monotonically non-decreasing uint64
 * payload. Signalling with a lower value is a no-op; signalling with a
 * strictly greater value is the only way to advance the timeline.
 * Waits are idempotent on completed values. An external "failure" bit
 * is tracked separately; once failed the semaphore cannot be advanced
 * and all waiters return ``CG_RT_ERR_ABORTED``.
 */
cg_rt_status_t cg_rt_semaphore_create(cg_rt_device_t     *device,
                                      uint64_t            initial_value,
                                      cg_rt_semaphore_t **out_semaphore);
void cg_rt_semaphore_destroy(cg_rt_semaphore_t *semaphore);
cg_rt_status_t cg_rt_semaphore_signal(cg_rt_semaphore_t *semaphore,
                                      uint64_t           value);
cg_rt_status_t cg_rt_semaphore_wait(cg_rt_semaphore_t *semaphore,
                                    uint64_t           value,
                                    uint64_t           timeout_ns);
cg_rt_status_t cg_rt_semaphore_query(cg_rt_semaphore_t *semaphore,
                                     uint64_t          *out_value);
void cg_rt_semaphore_fail(cg_rt_semaphore_t *semaphore,
                          cg_rt_status_t     status);
/* ------------------------------------------------------------------ */
/* Executables                                                         */
/* ------------------------------------------------------------------ */

/*
 * CPU executable entry point. The kernel sees:
 *   - ``push_constants``: opaque byte buffer of size ``pc_size``.
 *   - ``bindings``: array of mapped host pointers to each bound
 *     buffer. Size is ``n_bindings``. Caller-owned; the callee may
 *     not free them.
 *   - ``binding_sizes``: parallel array with each binding's byte size
 *     (useful for bounds-checked kernels).
 *
 * Return 0 for success, non-zero to indicate kernel failure (the
 * failure is forwarded to the signal semaphore).
 */
typedef int (*cg_rt_cpu_kernel_fn)(const void *push_constants,
                                   size_t      pc_size,
                                   void       **bindings,
                                   const size_t *binding_sizes,
                                   size_t      n_bindings);
cg_rt_status_t cg_rt_executable_create_cpu(cg_rt_device_t      *device,
                                           cg_rt_cpu_kernel_fn  entry_point,
                                           cg_rt_executable_t **out_executable);
/*
 * CUDA-specific executable factory. Compiles ``cuda_c_source`` through
 * NVRTC for the target device's compute capability and loads the
 * resulting PTX module.  ``kernel_name`` is the unmangled extern "C"
 * entry point inside the source.
 *
 * The launch descriptor built into ``cg_rt_command_buffer_dispatch``'s
 * ``push_constants`` block for a CUDA executable must be at least
 * 24 bytes laid out as six uint32s:
 *     [grid_x, grid_y, grid_z, block_x, block_y, block_z]
 * Any bytes after the first 24 are currently unused and reserved for
 * future kernel scalars.
 *
 * Only available when libxpu_rt was built with CUDA support. On
 * non-CUDA builds this symbol is absent from the .so; callers should
 * query ``available()`` via the Python binding or ``dlsym`` before
 * invoking.
 */
cg_rt_status_t cg_rt_executable_create_cuda_ptx(cg_rt_device_t      *device,
                                                const char          *cuda_c_source,
                                                const char          *kernel_name,
                                                cg_rt_executable_t **out_executable);
void cg_rt_executable_destroy(cg_rt_executable_t *executable);
/* ------------------------------------------------------------------ */
/* Command buffers                                                     */
/* ------------------------------------------------------------------ */

cg_rt_status_t cg_rt_command_buffer_create(cg_rt_device_t          *device,
                                           cg_rt_command_buffer_t **out_command_buffer);
void cg_rt_command_buffer_destroy(cg_rt_command_buffer_t *command_buffer);
cg_rt_status_t cg_rt_command_buffer_begin(cg_rt_command_buffer_t *command_buffer);
cg_rt_status_t cg_rt_command_buffer_end(cg_rt_command_buffer_t *command_buffer);
cg_rt_status_t cg_rt_command_buffer_copy(cg_rt_command_buffer_t *command_buffer,
                                         cg_rt_buffer_t         *src,
                                         size_t                  src_offset,
                                         cg_rt_buffer_t         *dst,
                                         size_t                  dst_offset,
                                         size_t                  size_bytes);